@@ -44,7 +44,7 @@ enabled                 = false
 lifetime                = 86400 ; 24 hrs in secs
 
 [debug]
-authenticationEnabled   = true
+authorisationEnabled    = true
 sessionDebugAllowed     = true
 customErrorHandler      = true
 production              = false
