@@ -245,9 +245,8 @@ class SGL_Process_AuthenticateRequest extends SGL_DecorateProcess
 
         $mgrName = SGL_Inflector::caseFix(get_class($mgr));
         if (isset( $this->conf[$mgrName]['requiresAuth'])
-                && $this->conf[$mgrName]['requiresAuth'] == true
-                && $this->conf['debug']['authenticationEnabled']) {
-
+                && $this->conf[$mgrName]['requiresAuth'] == true)
+        {
             //  check that session is not invalid or timed out
             if (!$session->isValid() || $timeout) {
 
