@@ -31,7 +31,7 @@ $conf['site']['wysiwyg_editor'] = 'fck';
 $conf['navigation']['enabled'] = '1';
 $conf['navigation']['driver'] = 'SimpleNav';
 $conf['navigation']['stylesheet'] = 'SglDefault_TwoLevel';
-$conf['debug']['authenticationEnabled'] = '1';
+$conf['debug']['authorisationEnabled'] = '1';
 $conf['debug']['customErrorHandler'] = '1';
 $conf['debug']['sessionDebugAllowed'] = '1';
 $conf['debug']['production'] = '0';
