@@ -1,4 +1,5 @@
 [UserSearchMgr]
+requiresAuth    = true
 
 [AccountMgr]
 requiresAuth    = true
@@ -17,6 +18,7 @@ typeEnabled     = false
 requiresAuth    = true
 
 [OrgPreferenceMgr]
+requiresAuth    = true
 
 [PasswordMgr]
 
