@@ -389,7 +389,7 @@
     <tr>
         <td class="fieldName">{translate(#Enable authentication#)}</td>
         <td class="fieldValue">
-            {generateRadioPair(#conf[debug][authenticationEnabled]#,conf[debug][authenticationEnabled]):h}
+            {generateRadioPair(#conf[debug][authorisationEnabled]#,conf[debug][authorisationEnabled]):h}
         </td>
         <td>
             <span class="tipOwner">
