@@ -330,7 +330,7 @@
     <tr>
         <td class="fieldName">{$result->translate('Enable authentication')}</td>
         <td class="fieldValue">
-            {$result->generateRadioPair('conf[debug][authenticationEnabled]',$result->conf.debug.authenticationEnabled)}
+            {$result->generateRadioPair('conf[debug][authorisationEnabled]',$result->conf.debug.authorisationEnabled)}
         </td>
         <td>
             <span class="tipOwner">
